fixed - cart spacing and fonts sizes

--- a/src/scss/base/_common.scss
+++ b/src/scss/base/_common.scss
@@ -204,6 +204,9 @@
   section {
     @extend %space;
   }
+  .contactHero {
+    padding-top: 0px !important;
+  }
 
   // banner img
   .signup-area-image {
@@ -227,6 +230,10 @@
   .banner-three h1,
   .banner-three .h1 .event-sub-section-main h4 {
     @extend %fonts-sm-2;
+  }
+  .cart-area .cart-wizard-area .text h6 {
+    font-size: 16px !important;
+    line-height: 26px !important;
   }
 
   // sub title
